# Kirchhoff

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
docs/: MKF_INTEGRATION.md  MKF_MIGRATION.md  MKF_PARITY_GAPS.md  RESONANT_ACCURACY_PLAN.md  SPEC.md  TOPOLOGY_ROADMAP.md
examples/: acf_demo.cpp  ahb_demo.cpp  api_consumer.cpp  boost_demo.cpp  clllc_demo.cpp  flyback_demo.cpp  fsbb_demo.cpp  pfc_demo.cpp  psfb_demo.cpp  pshb_demo.cpp  tas_flyback_demo.cpp  vienna_demo.cpp
scripts/: abt67_boost_sync_eff.py  build_ngspice_wasm.sh  gen_peas_topology.sh  maslift_topology.py  regulate.py  run_python_tests.sh  run_wasm_ngspice_smoke.sh
src/: Acf.cpp  Acf.hpp  Ahb.cpp  Ahb.hpp  Analytical.cpp  Analytical.hpp  AnalyticalDsp.cpp  AnalyticalDsp.hpp  Boost.cpp  Boost.hpp  Buck.cpp  Buck.hpp  ChokeDesign.hpp  Cllc.cpp  Cllc.hpp  Clllc.cpp  Clllc.hpp  Cmc.cpp  Cmc.hpp  CmcSim.cpp  ComponentRequirements.hpp  ComponentWaveforms.cpp  ComponentWaveforms.hpp  ConverterAnalytical.cpp  ConverterAnalytical.hpp  ConverterExtract.cpp  ConverterExtract.hpp  Cuk.cpp  Cuk.hpp  CurrentTransformer.cpp  CurrentTransformer.hpp  Dab.cpp  Dab.hpp  DatasheetModels.cpp  DatasheetModels.hpp  Dmc.cpp  Dmc.hpp  DmcSim.cpp  Flyback.cpp  Flyback.hpp  (+48 more)
tests/: averaged_model.py  test_advanced.cpp  test_analytical.cpp  test_analytical_dsp.cpp  test_cmc.cpp  test_component_waveforms.cpp  test_control_stage.cpp  test_converter_analytical.cpp  test_diagnostics.cpp  test_dmc_ct.cpp  test_extract.cpp  test_kelvin_sourcing.cpp  test_ltspice_backend.cpp  test_mkf_equivalence.cpp  test_ngspice_runner.cpp  test_nrmse_gate.cpp  test_pfc.cpp  test_ptp.cpp  test_real_fidelity.cpp  test_real_magnetic.cpp  test_regulate.py  test_requirements.cpp  test_resonant_validation.cpp  test_settings.cpp  test_tas_schema.py  test_vienna.cpp  wasm_ngspice_smoke.cpp
tests/reference/: acf.mkf.json  ahb.mkf.json  bind_magnetics.cpp  boost.mkf.json  buck.mkf.json  build_and_run.sh  cllc.mkf.json  cuk.mkf.json  dab.mkf.json  find_bad_core.cpp  flyback.mkf.json  forward.mkf.json  fsbb.mkf.json  gen_mkf_reference.cpp  gen_real_magnetic.cpp  isolated_buck.mkf.json  isolated_buck_boost.mkf.json  llc.mkf.json  psfb.mkf.json  pshb.mkf.json  push_pull.mkf.json  sepic.mkf.json  src.mkf.json  tas_io.cpp  two_switch_forward.mkf.json  validate_real_magnetic.cpp  weinberg.mkf.json  zeta.mkf.json
tests/wasm/: test_libkirchhoff.mjs  test_libkirchhoff_ngspice.mjs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
web/public/circuitjs/: circuitjs.html  iframe.html  kh-theme.css
web/scripts/: build-kelvin-shards.sh  checkCiasSchematicNets.mjs  checkComponentRatings.mjs  checkFalstadNets.mjs  checkSchematicNets.mjs  checkTransformerPolarity.mjs  deploy-prod.sh  nginx-kirchhoff.conf
web/src/: App.vue  bom.js  cias.js  ciasSchematic.js  falstad.js  kh.js  main.js  schematicCheck.js  schematics.js  style.css  synth.js  telemetry.js  topologies.js  units.js  worker.js
web/src/components/: FamilyDial.vue  OutputPane.vue  PartDrawer.vue  WavePane.vue  WaveformChart.vue
web/tests/e2e/: helpers.js  kelvin.spec.js  physics.spec.js  serialization.spec.js  smoke.spec.js  visualsim.spec.js
web/tests/lib/: measure.js  measure.test.js
